liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define LOS_OK 0
typedef int INT32;
typedef unsigned int UINT32;
typedef UINT32 HWI_HANDLE_T;
typedef struct tagIrqParam {
  /**
   *< The interrupt number
   */
  int swIrq;
  /**
   *< The pointer to the device ID that launches the interrupt
   */
  void *pDevId;
  /**
   *< The interrupt name
   */
  const CHAR *pName;
} tagIrqParam;
typedef struct tagIrqParam HwiIrqParam;
typedef unsigned short UINT16;
typedef UINT16 HWI_PRIOR_T;
typedef UINT16 HWI_MODE_T;
typedef void (*HWI_PROC_FUNC)(void);
typedef unsigned char UINT8;
typedef struct HwiControllerOps {
  UINT32 (*triggerIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*clearIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*enableIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*disableIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*setIrqPriority)(HWI_HANDLE_T hwiNum, UINT8 priority);
  UINT32 (*getCurIrqNum)(void);
  UINT32 (*createIrq)(HWI_HANDLE_T hwiNum, HWI_PRIOR_T hwiPrio);
} HwiControllerOps;
typedef unsigned long long UINT64;
typedef struct ArchTickTimer {
  UINT32 freq;
  INT32 irqNum;
  UINT64 periodMax;
  UINT32 (*init)(HWI_PROC_FUNC tickHandler);
  UINT64 (*getCycle)(UINT32 *period);
  UINT64 (*reload)(UINT64 time);
  void (*lock)(void);
  void (*unlock)(void);
  HWI_PROC_FUNC tickHandler;
} ArchTickTimer;
/**
 * @ingroup  los_interrupt
 * @brief Create a hardware interrupt.
 *
 * @par Description:
 * This API is used to configure a hardware interrupt and register a hardware interrupt handling function.
 *
 * @attention
 * <ul>
 * <li>The hardware interrupt module is usable only when the configuration item for hardware
 * interrupt tailoring is enabled.</li>
 * <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range
 * applicable for a Cortex-A7 platform is [32,95].</li>
 * <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>
 * <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>
 * </ul>
 *
 * @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable for a
 *                       Cortex-A7 platform is [32,95].
 * @param  hwiPrio  [IN] Type#HWI_PRIOR_T: hardware interrupt priority. Ignore this parameter temporarily.
 * @param  mode     [IN] Type#HWI_MODE_T: hardware interrupt mode. Ignore this parameter temporarily.
 * @param  handler  [IN] Type#HWI_PROC_FUNC: interrupt handler used when a hardware interrupt is triggered.
 * @param  irqParam [IN] Type#HwiIrqParam: input parameter of the interrupt
 *                                         handler used when a hardware interrupt is triggered.
 *
 * @retval #OS_ERRNO_HWI_PROC_FUNC_NULL               0x02000901: Null hardware interrupt handling function.
 * @retval #OS_ERRNO_HWI_NUM_INVALID                  0x02000900: Invalid interrupt number.
 * @retval #OS_ERRNO_HWI_NO_MEMORY                    0x02000903: Insufficient memory for hardware interrupt creation.
 * @retval #OS_ERRNO_HWI_ALREADY_CREATED              0x02000904: The interrupt handler being created has
 *                                                                already been created.
 * @retval #LOS_OK                                    0         : The interrupt is successfully created.
 * @par Dependency:
 * <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 ArchHwiCreate(HWI_HANDLE_T hwiNum,
                            HWI_PRIOR_T hwiPrio,
                            HWI_MODE_T mode,
                            HWI_PROC_FUNC handler,
                            HwiIrqParam *irqParam);
extern UINT32 ArchIsIntActive(void);
extern UINT32 ArchIntLock(void);
extern UINT32 ArchIntUnLock(void);
extern void ArchIntRestore(UINT32 intSave);
extern UINT32 ArchIntTrigger(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntEnable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntDisable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntClear(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntSetPriority(HWI_HANDLE_T hwiNum, HWI_PRIOR_T priority);
extern UINT32 ArchIntCurIrqNum(void);
extern struct HwiControllerOps *ArchIntOpsGet(void);
extern UINT32 ArchEnterSleep(void);
/**
 * @ingroup los_timer
 * @brief Get tick timer control block.
 *
 * @par Description:
 * This API is used to get tick timer control block.
 *
 * @param  None
 *
 * @retval #tick timer control block
 * @par Dependency:
 * <ul><li>los_timer.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern struct ArchTickTimer *ArchSysTickTimerGet(void);
extern void ArchInit(void);
/**
 * @ingroup  los_interrupt
 * @brief Create a hardware interrupt.
 *
 * @par Description:
 * This API is used to configure a hardware interrupt and register a hardware interrupt handling function.
 *
 * @attention
 * <ul>
 * <li>The hardware interrupt module is usable only when the configuration item for hardware
 * interrupt tailoring is enabled.</li>
 * <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range
 * applicable for a Cortex-A7 platform is [32,95].</li>
 * <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>
 * <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>
 * </ul>
 *
 * @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable for a
 *                       Cortex-A7 platform is [32,95].
 * @param  hwiPrio  [IN] Type#HWI_PRIOR_T: hardware interrupt priority. Ignore this parameter temporarily.
 * @param  mode     [IN] Type#HWI_MODE_T: hardware interrupt mode. Ignore this parameter temporarily.
 * @param  handler  [IN] Type#HWI_PROC_FUNC: interrupt handler used when a hardware interrupt is triggered.
 * @param  irqParam [IN] Type#HwiIrqParam: input parameter of the interrupt
 *                                         handler used when a hardware interrupt is triggered.
 *
 * @retval #OS_ERRNO_HWI_PROC_FUNC_NULL               0x02000901: Null hardware interrupt handling function.
 * @retval #OS_ERRNO_HWI_NUM_INVALID                  0x02000900: Invalid interrupt number.
 * @retval #OS_ERRNO_HWI_NO_MEMORY                    0x02000903: Insufficient memory for hardware interrupt creation.
 * @retval #OS_ERRNO_HWI_ALREADY_CREATED              0x02000904: The interrupt handler being created has
 *                                                                already been created.
 * @retval #LOS_OK                                    0         : The interrupt is successfully created.
 * @par Dependency:
 * <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 ArchHwiCreate(HWI_HANDLE_T hwiNum,
                            HWI_PRIOR_T hwiPrio,
                            HWI_MODE_T mode,
                            HWI_PROC_FUNC handler,
                            HwiIrqParam *irqParam);
extern UINT32 ArchIsIntActive(void);
extern UINT32 ArchIntLock(void);
extern UINT32 ArchIntUnLock(void);
extern void ArchIntRestore(UINT32 intSave);
extern UINT32 ArchIntTrigger(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntEnable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntDisable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntClear(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntSetPriority(HWI_HANDLE_T hwiNum, HWI_PRIOR_T priority);
extern UINT32 ArchIntCurIrqNum(void);
extern struct HwiControllerOps *ArchIntOpsGet(void);
extern UINT32 ArchEnterSleep(void);
/**
 * @ingroup los_timer
 * @brief Get tick timer control block.
 *
 * @par Description:
 * This API is used to get tick timer control block.
 *
 * @param  None
 *
 * @retval #tick timer control block
 * @par Dependency:
 * <ul><li>los_timer.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern struct ArchTickTimer *ArchSysTickTimerGet(void);
/**
 * @ingroup  los_interrupt
 * @brief Create a hardware interrupt.
 *
 * @par Description:
 * This API is used to configure a hardware interrupt and register a hardware interrupt handling function.
 *
 * @attention
 * <ul>
 * <li>The hardware interrupt module is usable only when the configuration item for hardware
 * interrupt tailoring is enabled.</li>
 * <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range
 * applicable for a Cortex-A7 platform is [32,95].</li>
 * <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>
 * <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>
 * </ul>
 *
 * @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable for a
 *                       Cortex-A7 platform is [32,95].
 * @param  hwiPrio  [IN] Type#HWI_PRIOR_T: hardware interrupt priority. Ignore this parameter temporarily.
 * @param  mode     [IN] Type#HWI_MODE_T: hardware interrupt mode. Ignore this parameter temporarily.
 * @param  handler  [IN] Type#HWI_PROC_FUNC: interrupt handler used when a hardware interrupt is triggered.
 * @param  irqParam [IN] Type#HwiIrqParam: input parameter of the interrupt
 *                                         handler used when a hardware interrupt is triggered.
 *
 * @retval #OS_ERRNO_HWI_PROC_FUNC_NULL               0x02000901: Null hardware interrupt handling function.
 * @retval #OS_ERRNO_HWI_NUM_INVALID                  0x02000900: Invalid interrupt number.
 * @retval #OS_ERRNO_HWI_NO_MEMORY                    0x02000903: Insufficient memory for hardware interrupt creation.
 * @retval #OS_ERRNO_HWI_ALREADY_CREATED              0x02000904: The interrupt handler being created has
 *                                                                already been created.
 * @retval #LOS_OK                                    0         : The interrupt is successfully created.
 * @par Dependency:
 * <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 ArchHwiCreate(HWI_HANDLE_T hwiNum,
                            HWI_PRIOR_T hwiPrio,
                            HWI_MODE_T mode,
                            HWI_PROC_FUNC handler,
                            HwiIrqParam *irqParam);
extern UINT32 ArchIsIntActive(void);
extern UINT32 ArchIntLock(void);
extern UINT32 ArchIntUnLock(void);
extern void ArchIntRestore(UINT32 intSave);
extern UINT32 ArchIntTrigger(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntEnable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntDisable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntClear(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntSetPriority(HWI_HANDLE_T hwiNum, HWI_PRIOR_T priority);
extern UINT32 ArchIntCurIrqNum(void);
extern struct HwiControllerOps *ArchIntOpsGet(void);
/**
 * @ingroup  los_interrupt
 * @brief Create a hardware interrupt.
 *
 * @par Description:
 * This API is used to configure a hardware interrupt and register a hardware interrupt handling function.
 *
 * @attention
 * <ul>
 * <li>The hardware interrupt module is usable only when the configuration item for hardware
 * interrupt tailoring is enabled.</li>
 * <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range
 * applicable for a Cortex-A7 platform is [32,95].</li>
 * <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>
 * <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>
 * </ul>
 *
 * @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable for a
 *                       Cortex-A7 platform is [32,95].
 * @param  hwiPrio  [IN] Type#HWI_PRIOR_T: hardware interrupt priority. Ignore this parameter temporarily.
 * @param  mode     [IN] Type#HWI_MODE_T: hardware interrupt mode. Ignore this parameter temporarily.
 * @param  handler  [IN] Type#HWI_PROC_FUNC: interrupt handler used when a hardware interrupt is triggered.
 * @param  irqParam [IN] Type#HwiIrqParam: input parameter of the interrupt
 *                                         handler used when a hardware interrupt is triggered.
 *
 * @retval #OS_ERRNO_HWI_PROC_FUNC_NULL               0x02000901: Null hardware interrupt handling function.
 * @retval #OS_ERRNO_HWI_NUM_INVALID                  0x02000900: Invalid interrupt number.
 * @retval #OS_ERRNO_HWI_NO_MEMORY                    0x02000903: Insufficient memory for hardware interrupt creation.
 * @retval #OS_ERRNO_HWI_ALREADY_CREATED              0x02000904: The interrupt handler being created has
 *                                                                already been created.
 * @retval #LOS_OK                                    0         : The interrupt is successfully created.
 * @par Dependency:
 * <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 ArchHwiCreate(HWI_HANDLE_T hwiNum,
                            HWI_PRIOR_T hwiPrio,
                            HWI_MODE_T mode,
                            HWI_PROC_FUNC handler,
                            HwiIrqParam *irqParam);
extern UINT32 ArchIsIntActive(void);
extern UINT32 ArchIntLock(void);
extern UINT32 ArchIntUnLock(void);
extern void ArchIntRestore(UINT32 intSave);
extern UINT32 ArchIntTrigger(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntEnable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntDisable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntClear(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntSetPriority(HWI_HANDLE_T hwiNum, HWI_PRIOR_T priority);
extern UINT32 ArchIntCurIrqNum(void);
extern struct HwiControllerOps *ArchIntOpsGet(void);
extern UINT32 ArchEnterSleep(void);
/**
 * @ingroup los_timer
 * @brief Get tick timer control block.
 *
 * @par Description:
 * This API is used to get tick timer control block.
 *
 * @param  None
 *
 * @retval #tick timer control block
 * @par Dependency:
 * <ul><li>los_timer.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern struct ArchTickTimer *ArchSysTickTimerGet(void);