liteOS-M/rust_kernel/kernel/rust_code/include/los_arch_h.rs

extern "C" {
    #[doc = " @ingroup  los_interrupt"]
    #[doc = " @brief Create a hardware interrupt."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to configure a hardware interrupt and register a hardware interrupt handling function."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The hardware interrupt module is usable only when the configuration item for hardware"]
    #[doc = " interrupt tailoring is enabled.</li>"]
    #[doc = " <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range"]
    #[doc = " applicable for a Cortex-A7 platform is [32,95].</li>"]
    #[doc = " <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>"]
    #[doc = " <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable for a"]
    #[doc = "                       Cortex-A7 platform is [32,95]."]
    #[doc = " @param  hwiPrio  [IN] Type#HWI_PRIOR_T: hardware interrupt priority. Ignore this parameter temporarily."]
    #[doc = " @param  mode     [IN] Type#HWI_MODE_T: hardware interrupt mode. Ignore this parameter temporarily."]
    #[doc = " @param  handler  [IN] Type#HWI_PROC_FUNC: interrupt handler used when a hardware interrupt is triggered."]
    #[doc = " @param  irqParam [IN] Type#HwiIrqParam: input parameter of the interrupt"]
    #[doc = "                                         handler used when a hardware interrupt is triggered."]
    #[doc = ""]
    #[doc = " @retval #OS_ERRNO_HWI_PROC_FUNC_NULL               0x02000901: Null hardware interrupt handling function."]
    #[doc = " @retval #OS_ERRNO_HWI_NUM_INVALID                  0x02000900: Invalid interrupt number."]
    #[doc = " @retval #OS_ERRNO_HWI_NO_MEMORY                    0x02000903: Insufficient memory for hardware interrupt creation."]
    #[doc = " @retval #OS_ERRNO_HWI_ALREADY_CREATED              0x02000904: The interrupt handler being created has"]
    #[doc = "                                                                already been created."]
    #[doc = " @retval #LOS_OK                                    0         : The interrupt is successfully created."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn ArchHwiCreate(
        hwiNum: HWI_HANDLE_T,
        hwiPrio: HWI_PRIOR_T,
        mode: HWI_MODE_T,
        handler: HWI_PROC_FUNC,
        irqParam: *mut HwiIrqParam,
    ) -> UINT32;
}
extern "C" {
    pub fn ArchIsIntActive() -> UINT32;
}
extern "C" {
    pub fn ArchIntLock() -> UINT32;
}
extern "C" {
    pub fn ArchIntUnLock() -> UINT32;
}
extern "C" {
    pub fn ArchIntRestore(intSave: UINT32);
}
extern "C" {
    pub fn ArchIntTrigger(hwiNum: HWI_HANDLE_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntEnable(hwiNum: HWI_HANDLE_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntDisable(hwiNum: HWI_HANDLE_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntClear(hwiNum: HWI_HANDLE_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntSetPriority(hwiNum: HWI_HANDLE_T, priority: HWI_PRIOR_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntCurIrqNum() -> UINT32;
}
extern "C" {
    pub fn ArchIntOpsGet() -> *mut HwiControllerOps;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArchTickTimer {
    pub freq: UINT32,
    pub irqNum: INT32,
    pub periodMax: UINT64,
    pub init: ::std::option::Option<unsafe extern "C" fn(tickHandler: HWI_PROC_FUNC) -> UINT32>,
    pub getCycle: ::std::option::Option<unsafe extern "C" fn(period: *mut UINT32) -> UINT64>,
    pub reload: ::std::option::Option<unsafe extern "C" fn(time: UINT64) -> UINT64>,
    pub lock: ::std::option::Option<unsafe extern "C" fn()>,
    pub unlock: ::std::option::Option<unsafe extern "C" fn()>,
    pub tickHandler: HWI_PROC_FUNC,
}
#[test]
fn bindgen_test_layout_ArchTickTimer() {
    assert_eq!(
        ::std::mem::size_of::<ArchTickTimer>(),
        64usize,
        concat!("Size of: ", stringify!(ArchTickTimer))
    );
    assert_eq!(
        ::std::mem::align_of::<ArchTickTimer>(),
        8usize,
        concat!("Alignment of ", stringify!(ArchTickTimer))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).freq as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(freq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).irqNum as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(irqNum)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).periodMax as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(periodMax)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).init as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(init)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).getCycle as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(getCycle)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).reload as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(reload)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).lock as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(lock)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).unlock as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(unlock)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).tickHandler as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(tickHandler)
        )
    );
}
extern "C" {
    pub fn ArchEnterSleep() -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_timer"]
    #[doc = " @brief Get tick timer control block."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to get tick timer control block."]
    #[doc = ""]
    #[doc = " @param  None"]
    #[doc = ""]
    #[doc = " @retval #tick timer control block"]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_timer.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn ArchSysTickTimerGet() -> *mut ArchTickTimer;
}
extern "C" {
    pub fn ArchInit();
}
